# Becky

./: README.md  main.py  pyproject.toml
challenges/05/consistent_quotation_marks/: instructions.md  output.py  source_code.py
challenges/05/remove_duplicate_imports/: instructions.md  source_code.py
challenges/05/remove_unused_variables/: instructions.md  output.py  source_code.py
challenges/05/sort_variables/: instructions.md  output.py  source_code.py
challenges/10/consistent_naming_convention/: instructions.md  output.py  source_code.py
challenges/10/missing_colon/: instructions.md  output.py  source_code.py
challenges/10/simplify_boolean_expression/: instructions.md  output.py  source_code.py
config/: settings.py
models/: becky.py  challenge.py  challenge_manager.py
utils/: files.py  strings.py
